<resources>
    <string name="app_name">Math pro app</string>
    <string name="start_game">Start game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="timer">Timer</string>
    <string name="question_field">question field</string>
    <string name="defoult_option">9999</string>
    <string name="end">Game over!</string>
    <string name="correct_answers">Correct\nanswers:</string>
    <string name="record">Record:</string>
    <string name="score">Score:</string>
    <string name="retry">Retry</string>
    <string name="home">Home</string>
    <string name="time_out">time out!</string>
    <string name="count_of_questions">/20</string>
    <string name="result">Result:</string>
</resources>