<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_main"
    tools:context=".fragments.EndFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:background="@drawable/bg_results"
        android:contentDescription="@string/timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:background="@drawable/bg_btn_black"
        android:text="@string/end"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:fontFamily="@font/centurygothic_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/llCountOfCorrectAnswers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGameOver">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_answers"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:fontFamily="@font/centurygothic_bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvCountOfCorrectAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/count_of_correct_answers"
            android:textSize="40sp"
            android:fontFamily="@font/centurygothic_bold"
            tools:text="12"/>

        <TextView
            android:id="@+id/tvCountOfAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/count_of_questions"
            android:textColor="@color/count_of_correct_answers"
            android:textSize="40sp"
            android:fontFamily="@font/centurygothic_bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llGameResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llCountOfCorrectAnswers">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:fontFamily="@font/centurygothic_bold"/>

        <TextView
            android:id="@+id/tvRecordScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/count_of_correct_answers"
            android:textSize="50sp"
            android:fontFamily="@font/centurygothic_bold"
            tools:text="1630"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:fontFamily="@font/centurygothic_bold"/>

        <TextView
            android:id="@+id/tvGameScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/red"
            android:textSize="50sp"
            android:fontFamily="@font/centurygothic_bold"
            tools:text="1630"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/llGameResults"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRetryGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_black"
            android:backgroundTint="@color/count_of_correct_answers"
            android:text="@string/retry"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:fontFamily="@font/centurygothic_bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHome"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_btn_black"
            android:backgroundTint="@color/btn_bg"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:fontFamily="@font/centurygothic_bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>