<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".fragments.GameFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_timer"
        android:contentDescription="@string/timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTimerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/centurygothic_bold"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTimerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/centurygothic_bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimerTitle"
        tools:text="1:00" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_score"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimerCount">

        <TextView
            android:id="@+id/tvScoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="2dp"
            android:text="@string/score"
            android:fontFamily="@font/centurygothic_bold"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvScoreCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/centurygothic_bold"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:text="9999" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/question_field"
        android:src="@drawable/bg_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/llQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvQuestionX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/centurygothic_bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="64sp"
            tools:text="999" />

        <TextView
            android:id="@+id/tvQuestionAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/centurygothic_bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="64sp"
            tools:text="+" />

        <TextView
            android:id="@+id/tvQuestionY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/centurygothic_bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="64sp"
            tools:text="999" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llQuestion">

        <TextView
            android:id="@+id/tvAnswerLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_option"
            android:foreground="@drawable/bg_ripple"
            android:text="@string/defoult_option"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:fontFamily="@font/centurygothic_bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvAnswerRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_option"
            android:foreground="@drawable/bg_ripple"
            android:text="@string/defoult_option"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:fontFamily="@font/centurygothic_bold"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>